name:                yahl
version:             0.1.0.0
synopsis:            YetAnotherHaskell: for the LLVM
homepage:            github.com/AlecAivazis/yahl
license:             MIT
author:              Alec Aivazis
maintainer:          alec@aivazis.com
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10


executable repl
  build-depends:
      base       >= 4.6 && <4.9
    , pretty     >= 1.1 && <1.2
    , parsec     >= 3.1 && <3.2
    , containers >= 0.5 && <0.7
    , haskeline  >= 0.7
    , mtl        >= 2.2 && <2.4
    , transformers
  default-language:    Haskell2010
  hs-source-dirs:      src
  main-is:             Repl.hs

  Build-depends:       base, array


executable yahl
  build-depends:
      base       >= 4.6 && <4.9
    , pretty     >= 1.1 && <1.2
    , parsec     >= 3.1 && <3.2
    , containers >= 0.5 && <0.7
    , haskeline  >= 0.7
    , mtl        >= 2.2 && <2.4
    , transformers
  default-language:    Haskell2010
  hs-source-dirs:      src
  main-is:             Main.hs

  Build-depends:       base, array